tests/fixtures/BinaryOperationLiteralTests/errors/integer_overflow_literal.fg
/; EXPECT_ERROR: NumberTooLargeForInt
print(99999999999999999999999999999999999999999)

